--- a/src/App.css
+++ b/src/App.css
@@ -25,12 +25,10 @@
   position: fixed;
   bottom: 50px;
   right: 50px;
-  background: #5A5EB9;
-  width: 80px;
-  height: 80px;  
+  background: #5A5EB9;  
   border-radius: 50%;
   color: white;
-  padding: 28px;
+  padding: 26px;
   cursor: pointer;
   box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.6), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
 }
@@ -211,7 +209,18 @@ img {
   background: #5A5EB9;
   color:white;
 }
+
 .received p {
-  background: #e5e5ea;
+  align-self: flex-end;
+  margin-left:10px;
+  background: white;
   color: black;
+}
+
+.hide {
+  display: none;
+}
+
+.show {
+  display: block;
 }
